--- a/welcomePg.css
+++ b/welcomePg.css
@@ -4,10 +4,10 @@
     box-sizing: border-box;
 }
 
-.body{
+body{
     width: 100vw;
     height: 100vh;
-    background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
+    background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;   
@@ -23,27 +23,31 @@
     position: relative;
 }
 
-.body h1{
+.body1{
+    width: 100%;
+    height: 45%;
+    position: absolute;
+    top: 20%;
+}
+h1{
     color: white;
     text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
     font-size: 4rem;
     position: absolute;
-    top: 20%;
     left: 20%;
 }
 
 .button{
-    display: inline-block;
-    position: relative;
+    display: block;
     width: 210px;
     height: 50px;
     border-radius: 15px;
     border: 2px solid whitesmoke;
     background-color: brown;
     color: white;
-    /* top: 20px; */
     font-size: 30px;
     font-weight: 600;
+    text-decoration: none;
 }
 .button:hover{
     cursor: pointer;
@@ -53,52 +57,74 @@
     font-weight: 800;
 }
 
-h1 .button{
-    top: 70px;
-    left: -300px;
+.signup{
+    position: absolute;
+    bottom: 0;
+    left: 20%;  
 }
 
+.body2{
+    width: 100%;
+    height: 35%;
+    /* background-color: red; */
+    position: absolute;
+    bottom: 0%;
+}
 h2{
     color: white;
     text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
     font-size: 3rem;
     position: absolute;
-    top: 70%;
+    /* top: 70%; */
     right: 10%;
 }
-h2 span{
+
+.login{
+    position: absolute;
+    right: 10%;
+    top: 32%;
     display: block;
-}
-h2 button{
-    /* right: 0px; */
-    display: block;
-    left: 60%;
-    width: 140px;
-    height: 33.73px;
-    font-size: 26.25px;
-    /* top: 70px; */
+    
+    width: 160px;
+    height: 45px;
+    font-size: 25px;
+    
 }
 
 /* Responsiveness */
 
-@media screen and (max-width: 767px) {
-    .body h1 {
+@media screen and (max-width: 780px) {
+    body{
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+    }
+    
+    h1{
+        text-shadow: -0.5px -0.5px brown, 0.5px -0.5px 0 brown, -0.5px 1px 0 brown, 1px 1px 0 brown;
+        /* text-shadow: none; */
         font-size: 2rem;
-        top: 15%;
+        /* top: 15%; */
+        /* color: brown; */
+        left: 5%;
     }
     h2 {
-        font-size: 1.5rem;
-        top: 60%;
+        font-size: 1.8rem;
+        text-align: right;
         right: 5%;
+        /* color: brown; */
+        text-shadow: -0.5px -0.5px brown, 0.5px -0.5px 0 brown, -0.5px 1px 0 brown, 1px 1px 0 brown;
     }
-    h1 .button{
+
+    .signup{
         font-size: 20px;
-        left: 50%;
-        transform: translateX(-50%);
+        width: 120px;
+        left: 5%;
+        bottom: 15%;
     }
-    h2 button {
+    .login {
         font-size: 20px;
-        left: 50%;
-        transform: translateX(-50%); /* Center horizontally */
+        width: 100px;
+        right: 5%;
     }
   }
