--- a/welcomePg.css
+++ b/welcomePg.css
@@ -7,7 +7,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152 (1).jpg);
+    background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;   
@@ -98,11 +98,12 @@ h2{
         width: 100vw;
         height: 100vh;
         overflow: hidden;
-        background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152 (1).jpg);
+        background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;   
     }
+    
     
     h1{
         text-shadow: -0.5px -0.5px brown, 0.5px -0.5px 0 brown, -0.5px 1px 0 brown, 1px 1px 0 brown;
