--- a/welcomePg.css
+++ b/welcomePg.css
@@ -3,51 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+}
 
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
+    background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;  
+    display: block; 
 }
 .logo{
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%; /* Allow the logo to resize based on screen size */
-    height: auto;
-}
-.logo img{
     position: relative;
+    width: 30%;
+    /* min-width: 26%; */
+    height: auto;
+    /* background-color: red; */
 }
 
 .body1{
     width: 100%;
-    height: 45%;
-    position: absolute;
-    top: 20%;
+    height: auto;
+    position: relative;
+    /* background-color: red; */
 }
 h1{
     color: white;
     text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
     font-size: 4rem;
-    position: absolute;
-    left: 20%;
+    /* position: absolute; */
+    position: relative;
+    margin-left: 15%;
+    display: block;
 }
 
-.button{
-    display: block;
+.signup{
+    /* position: absolute; */
+    position: relative;
+    /* bottom: 0; */
+    margin-top: 1%;
+    margin-left: 15%;  
     width: 210px;
     height: 50px;
+}
+.button{
+    display: block;
     border-radius: 15px;
     border: 2px solid whitesmoke;
     background-color: brown;
     color: white;
     font-size: 30px;
     font-weight: 600;
-    text-decoration: none;
 }
 .button:hover{
     cursor: pointer;
@@ -57,37 +66,34 @@ h1{
     font-weight: 800;
 }
 
-.signup{
-    position: absolute;
-    bottom: 0;
-    left: 20%;  
-}
 
 .body2{
     width: 100%;
-    height: 35%;
+    height: auto;
     /* background-color: red; */
-    position: absolute;
-    bottom: 0%;
+    position: relative;
+    top: 5%;
+    
 }
 h2{
     color: white;
     text-shadow: -1px -1px brown, 1px -1px 0 brown, -1px 1px 0 brown, 1px 1px 0 brown;
     font-size: 3rem;
-    position: absolute;
-    /* top: 70%; */
-    right: 10%;
+    /* position: absolute; */
+    text-align: end;
+    display: block;
+    margin-right: 10%;
+    
 }
 
 .login{
-    position: absolute;
-    right: 10%;
-    top: 32%;
-    display: block;
-    
+    position: relative;
+    top: 5%;
+    margin-left: auto;
     width: 160px;
     height: 45px;
     font-size: 25px;
+    margin-right: 10%;
     
 }
 
@@ -98,12 +104,15 @@ h2{
         width: 100vw;
         height: 100vh;
         overflow: hidden;
-        background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
+        background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;   
     }
-    
+    .logo{
+        width: 100%;
+
+    }
     
     h1{
         text-shadow: -0.5px -0.5px brown, 0.5px -0.5px 0 brown, -0.5px 1px 0 brown, 1px 1px 0 brown;
@@ -111,12 +120,12 @@ h2{
         font-size: 2rem;
         /* top: 15%; */
         /* color: brown; */
-        left: 5%;
+        margin-left: 5%;
     }
     h2 {
         font-size: 1.8rem;
         text-align: right;
-        right: 5%;
+        margin-right: 5%;
         /* color: brown; */
         text-shadow: -0.5px -0.5px brown, 0.5px -0.5px 0 brown, -0.5px 1px 0 brown, 1px 1px 0 brown;
     }
@@ -124,12 +133,13 @@ h2{
     .signup{
         font-size: 20px;
         width: 120px;
-        left: 5%;
-        bottom: 15%;
+        margin-left: 5%;
+        margin-top: 5%;
     }
     .login {
         font-size: 20px;
         width: 100px;
-        right: 5%;
+        margin-top: 4%;
+        margin-right: 5%;
     }
   }
