--- a/welcomePg.css
+++ b/welcomePg.css
@@ -5,12 +5,13 @@
 }
 a{
     text-decoration: none;
+    color: white;
 }
 
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
+    background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;  
@@ -50,11 +51,20 @@ h1{
     height: 50px;
 }
 .button{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 15px;
     border: 2px solid whitesmoke;
     background-color: brown;
     color: white;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+}
+.button a{
+    font: 1em sans-serif;
     font-size: 30px;
     font-weight: 600;
 }
@@ -88,7 +98,7 @@ h2{
 
 .login{
     position: relative;
-    top: 5%;
+    margin-top: 1%;
     margin-left: auto;
     width: 160px;
     height: 45px;
@@ -104,7 +114,7 @@ h2{
         width: 100vw;
         height: 100vh;
         overflow: hidden;
-        background-image: url(83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
+        background-image: url(../img/83decb21-258d-425d-a8ac-4c98c4512f05-shutterstock-1128225152\ \(1\).jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;   
@@ -131,15 +141,21 @@ h2{
     }
 
     .signup{
-        font-size: 20px;
         width: 120px;
         margin-left: 5%;
         margin-top: 5%;
     }
-    .login {
+    .signup a{
         font-size: 20px;
+        font-weight: 500;
+    }
+    .login {
         width: 100px;
         margin-top: 4%;
         margin-right: 5%;
+    }
+    .login a{
+        font-size: 20px;
+        font-weight: 500;
     }
   }
