--- a/homePage.css
+++ b/homePage.css
@@ -159,7 +159,7 @@ nav a{
     position: relative;
     box-sizing: border-box; 
     margin-top: 10%;
-    background-color: red;
+/*     background-color: red; */
 }
 
 .tote-bags div{
@@ -350,7 +350,7 @@ nav a{
     height: auto;
     margin-top: 5%;
     margin-bottom: 2%;
-    background-color: red;
+/*     background-color: red; */
 }
 .connect h1{
     font-size: 2rem;
