--- a/sign-up.css
+++ b/sign-up.css
@@ -14,7 +14,7 @@ body {
     width: 60vw;
     
     background-color: brown;
-    background-image: url(../img/pexels-alexander-grey-4048389.jpg);
+    background-image: url(pexels-alexander-grey-4048389.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@ body {
     height: 300px;
     background-color: white;
     border-radius: 50%;
-    background-image: url(../img/IMG-20230720-WA0008.jpg);
+    background-image: url(IMG-20230720-WA0008.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
