--- a/homePage.css
+++ b/homePage.css
@@ -151,7 +151,7 @@ nav a{
 
 .sticky {
     margin-left: 25%;
-    position: fixed;
+    position: sticky;
     font-size: 1.5rem;
     bottom: 50px;
     /* background-color: burlywood; */
