--- a/homePage.css
+++ b/homePage.css
@@ -47,15 +47,17 @@ nav a{
 
 .logo{
     position: relative;
-    left: 0;
     height: 100%;
-    width: 35%;
+    width: auto;
+    margin-left: 10%;
 }
 .logo img{
-    width: 80%; 
-    height: 300%; 
+    object-fit: contain;
+    /* width: 180%; */
+    width: 100%;
+    height: 100%; 
     position: relative;  
-    top: -60px;
+    
 }
 
 .links {
@@ -432,15 +434,15 @@ nav a{
         height: 9vh;
     }
     .logo{
-        width: 60%;
+        width: auto;
+        margin-left: 0%;
+        margin-right: 2%;
     }
     .logo img{
         width: 100%;
         /* background-color: red; */
-        object-fit: cover;
+        object-fit: contain;
         height: 100%;
-        top: 0;
-        left: -20px;
     }
     
     /* -------------------- */
