--- a/sign-up.css
+++ b/sign-up.css
@@ -14,7 +14,7 @@ body {
     width: 60vw;
     
     background-color: brown;
-    background-image: url(pexels-alexander-grey-4048389.jpg);
+    background-image: url(../img/pexels-alexander-grey-4048389.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@ body {
     height: 300px;
     background-color: white;
     border-radius: 50%;
-    background-image: url(IMG-20230720-WA0008.jpg);
+    background-image: url(../img/IMG-20230720-WA0008.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -37,112 +37,94 @@ body {
 .sign-in {
     width: 40vw;
     min-height: 100vh; /* Adjust the minimum height as needed */
-    overflow-y:hidden;
+    overflow-y: scroll;
     /* background-color: red; */
     color: brown;
     overflow-x: hidden;
 }
 
-.sign-in p{
+.sign-in > p{
     text-decoration: underline;
     display: flex;
     justify-content: center;
     position: relative;
-    top: 28px;
+    margin-top: 5%;
     font-size: 2rem;
     color: brown(172, 142, 103);
 }
 
-.sign-in div input{
+#fname, #lname{
     width: 90%;
     height: 2.5rem;
     display: block;
     position: relative;
     left: 5%;
-    top: 65px;
+    margin-top: 5%;
     border: 2px solid brown;
     border-radius: 10px;
     font-size: 1.2rem;
-    /* padding-left: 1%;  needed if text is aligned to the left */
     text-align: center;
 }
 
     
-#lname{
-    top:95px;
-}
-#password{
-    top: 125px;
-}
-.fa-eye, .fa-eye-slash{
-    position: absolute;
-    top: 254px;
-    right: 90px;
-    color: grey;
-    cursor: pointer;
+#fname{
+    margin-top: 11%;
 }
 
-.google{
-    border: 2px solid burlywood;
-    height: 3rem;
-    text-align: center;
-    color: blue;
-    width: 90%;
+#password-container{
     position: relative;
+    display: flex; 
+    align-items: center; 
+    width: 90%; 
+    margin-top: 5%;
     left: 5%;
-    border-radius: 10px;
-    top: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.google:hover{
-    background-color: blue;
-    color: white;
-    cursor: pointer;
-    border: 2px solid gray;
+    border: none; 
+    border-radius: 10px; 
 }
 
-.google span{
-    font-size: 1.5rem;
-}
-.mr-2{
-    font-size: 1.4rem;
-    margin-right: 10px;
-    height: 1.5rem;
-    width: 1.5rem;
+#password{
+    border-radius: 10px; 
+    border: 2px solid brown; 
+    flex: 1; 
+    height: 2.5rem;
+    font-size: 1.2rem;
+    text-align: center;
+    /* outline: none; */
     
 }
+
+.fa-eye, .fa-eye-slash{
+    position: absolute; 
+    top: 50%; 
+    right: 10%; 
+    transform: translateY(-50%); 
+    cursor: pointer; 
+    color: grey; 
+}
+
 .password-des{
     position: relative;
-    top: 140px;
+    margin-top: 2%;
     left: 5%;
-    font-size: 22px;
+    font-size: 16.5px;
     color: brown;
     white-space: normal;
     margin-right: 5%;
 }
 
-#terms, .sign-in form > span{
+.terms-cond{
     position: relative;
-    top: 230px;
+    display: flex;
+    margin-top: 4%;
     left: 5%;
-    font-size: 18.5px;
-    color: brown;
+    margin-right: 5%;
+    
 }
 
-.sign-in hr{
-    position: relative;
-    top: 166px;
-    width: 40%;
-    left: 5%;
-}
-.or{
-    position: relative;
-    top: 152px;
-    left: 7%;
-    font-size: 1.5rem;
-    font-weight: 600;
+.terms-cond p{
+    font-size: 19px;
+    color: brown;
+    margin-left: 2%;
 }
 
 .button, .signup-link{
@@ -155,12 +137,11 @@ body {
     border-radius: 10px;
     border: 2px solid gray;
     background-color: brown;
-
     color: white;
-    /* top: 20px; */
     font-size: 1.3rem;
-    left: 5%;
-    top: 270px;
+    margin-left: auto;
+    margin-right: 5%;
+    margin-top: 7%;
     font-weight: 700;
 }
 .button a{
@@ -189,12 +170,13 @@ body {
 
 
 
-.sign-in .login{
+.login{
     position: relative;
     left: 5%;
-    top: 285px;
-    justify-content: left;
-    font-size: 18.5px;
+    /* top: 285px; */
+    margin-top: 7%;
+    text-align: center;
+    font-size: 19px;
     color: brown;
     text-decoration: none;
 }
@@ -202,27 +184,70 @@ body {
     margin-left: 10px;
 }
 
+.divider{
+    width: 80%;
+    position: relative;
+    margin-top: 8%;
+    background-color: black;
+    color: black;
+    left: 10%;
+    
+}
+
+.google{
+    border: 2px solid burlywood;
+    height: 3rem;
+    text-align: center;
+    color: blue;
+    width: 90%;
+    position: relative;
+    left: 5%;
+    border-radius: 10px;
+    margin-top: 8%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5%;
+}
+.google:hover{
+    background-color: blue;
+    color: white;
+    cursor: pointer;
+    border: 2px solid gray;
+}
+
+.google span{
+    font-size: 1.5rem;
+}
+.mr-2{
+    font-size: 1.4rem;
+    margin-right: 10px;
+    height: 1.5rem;
+    width: 1.5rem;
+    
+}
 @media screen and (max-width: 780px) {
     .logo{
         display: none;
     }
     input{
         height: 1.5rem;
+        border-radius: 8px;
     }
+    
     .sign-in{
         width: 100vw;
     }
     .password-des{
-        /* display: flex; */
         font-size: 16px;
         white-space: normal;
     }
-    #terms, .sign-in form > span{
+    .terms-cond{
+        font-size: 16px;   
+        margin-right: 5%;     
+    }
+    .login, .login a{
         font-size: 16px;
-        margin-right: 5%;
-        
     }
-    .sign-in form > span{
-        left: 2%;
-    }
+    
 }
